# endpoints

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTION  pyproject.toml
.github/workflows/: auto-review.yml  pre-commit.yml  test.yml
docs/: CLIENT_PERFORMANCE_TUNING.md  CLI_QUICK_REFERENCE.md  ENDPOINT_CLIENT.md  LOCAL_TESTING.md  MULTI_TURN_QUICKSTART.md  PERF_ARCHITECTURE.md  compliance_audit_plan.md
docs/async_utils/: DESIGN.md
docs/async_utils/services/event_logger/: DESIGN.md
docs/async_utils/transport/zmq/: ready_check_design.md
docs/core/: DESIGN.md
docs/dataset_manager/: DESIGN.md
docs/evaluation/: DESIGN.md
docs/load_generator/: DESIGN.md
docs/metrics/: DESIGN.md  report_design.md
docs/openai/: DESIGN.md
examples/04_GPTOSS120B_Example/: Readme.md  vllm_gptoss_120b_per_dataset_osl_example.yaml
examples/05_Llama3.1-8B_Example/: download_cnndm.py
examples/07_DeepSeekR1_Example/: README.md
examples/07_DeepSeekR1_Example/data/: deepseek_r1_eval.parquet
examples/08_Qwen3-VL-235B-A22B_Example/: interactive_qwen3_vl_235b_a22b_shopify_8k.yaml  offline_qwen3_vl_235b_a22b_shopify.yaml  server_qwen3_vl_235b_a22b_shopify.yaml
examples/09_MultiTurn/: README.md  agentic_coding_acc_benchmark.yaml  agentic_coding_acc_benchmark_sampl.yaml  agentic_coding_benchmark.yaml  agentic_workflow_benchmark.yaml  customer_support_conversations.jsonl  kimi_agentic_benchmark.yaml  multi_turn_benchmark.yaml  multi_turn_with_concurrency.yaml  qwen_agentic.yaml  qwen_agentic_benchmark.yaml  swe_bench_accuracy.yaml  vllm_gptoss_120b_example.yaml
examples/09_MultiTurn/accuracy/: RUNBOOK.md  pyproject.toml
examples/09_MultiTurn/scripts/: analyze_flat_jsonl.py  score_inline_accuracy.py
examples/09_Wan22_VideoGen_Example/: offline_wan22.yaml  offline_wan22_submission.yaml  setup_and_test.sh  single_stream_wan22_submission.yaml  wan22_prompts.jsonl
examples/10_Agentic_Inference/: README.md  kimi_agentic_benchmark.yaml  qwen_agentic_benchmark.yaml  swe_bench_accuracy.yaml  swebench_template.yaml
examples/10_Agentic_Inference/accuracy/: RUNBOOK.md  actions_toolcall.py  finish_tool.patch  litellm_model.py  pyproject.toml  swebench_qwen_tools_template.yaml  swebench_template.yaml
examples/10_CollectOutputs/: README.md  benchmark_with_output_collection.yaml
examples/10_SWEBench_Example/: swe_bench_accuracy.yaml  swe_bench_accuracy_smoke.yaml  swe_bench_multiturn_smoke.yaml  swebench_template.yaml
examples/10_SWEBench_Example/accuracy/: RUNBOOK.md  pyproject.toml
scripts/: Dockerfile.dev  convert_agentic_snapshot.py  multi_turn_dataset_schema.json  regenerate_templates.py  trace_dashboard.py  validate_jsonl_schema.py
src/inference_endpoint/: main.py
src/inference_endpoint/async_utils/: event_publisher.py
src/inference_endpoint/async_utils/transport/: protocol.py
src/inference_endpoint/commands/: audit.py  probe.py
src/inference_endpoint/compliance/: __init__.py  result.py
src/inference_endpoint/config/: runtime_settings.py  schema.py
src/inference_endpoint/core/: record.py  types.py
src/inference_endpoint/dataset_manager/: __init__.py  cache_salt.py  dataset.py  factory.py  multi_turn_dataset.py  transforms.py
src/inference_endpoint/endpoint_client/: adapter_protocol.py  config.py  http.py  worker.py
src/inference_endpoint/evaluation/: scoring.py  swe_bench_scorer.py
src/inference_endpoint/evaluation/legacy_mlperf_deepseek_r1/: .gitignore  deepseek_eval_runner.py  pyproject.toml  setup_eval.sh
src/inference_endpoint/evaluation/swebench_service/: README.md  pyproject.toml
src/inference_endpoint/evaluation/swebench_service/swebench_service/: __init__.py  __main__.py  artifacts.py  config.py  runner.py  schemas.py  server.py
src/inference_endpoint/evaluation/swebench_service/swebench_service/templates/: MINI_SWE_AGENT_LICENSE.md  actions_toolcall.py  litellm_model.py  swebench_qwen_tools_template.yaml  swebench_template.yaml
src/inference_endpoint/load_generator/: conversation_manager.py  multi_turn_strategy.py  sample_order.py  session.py  strategy.py
src/inference_endpoint/metrics/: report.py
src/inference_endpoint/openai/: accumulator.py  completions_adapter.py  harmony.py  openai_adapter.py  openai_msgspec_adapter.py  types.py
src/inference_endpoint/testing/: echo_server.py
src/inference_endpoint/utils/: logging.py  trace.py  trace_dashboard.py  version.py
src/inference_endpoint/videogen/: __init__.py  adapter.py  types.py
tests/integration/: test_agentic_inference.py  test_multi_turn.py  test_multi_turn_metrics.py
tests/integration/commands/: test_benchmark_command.py  test_probe_command.py
tests/integration/videogen/: conftest.py  test_adapter.py
tests/performance/openai/: test_adapter.py  test_msgspec_adapter.py  test_types.py
tests/unit/: test_version.py
tests/unit/async_utils/: test_event_publisher.py
tests/unit/commands/: test_benchmark.py  test_precompute_isl.py  test_score_accuracy.py
tests/unit/compliance/: test_output_caching.py
tests/unit/config/: test_runtime_settings_sample_order.py  test_schema.py
tests/unit/core/: test_record.py  test_types.py
tests/unit/dataset_manager/: test_deepseek_r1_dataset.py  test_factory.py  test_multi_turn_dataset.py  test_shopify_product_catalogue.py  test_swe_bench_dataset.py  test_transforms.py
tests/unit/evaluation/: test_actions_toolcall.py  test_deepseek_r1_scorer.py  test_swe_bench_scorer.py
tests/unit/load_generator/: test_agentic_inference_strategy.py  test_async_session.py  test_multi_turn_conversation_manager.py  test_multi_turn_strategy.py  test_single_sample_order.py
tests/unit/metrics/: test_report_builder.py
tests/unit/openai/: test_accumulator.py  test_completions_adapter.py  test_msgspec_adapter.py  test_openai_adapter.py
tests/unit/scripts/: test_validate_jsonl_schema.py
tests/unit/transport/: test_zmq_pool_transport.py
tests/unit/utils/: test_trace.py  test_trace_dashboard.py
tests/unit/videogen/: test_adapter.py  test_init.py  test_registration.py  test_types.py
(+34 files in other folders)
