[build-system]
requires = ["uv_build==0.7.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[project]
name = "swebench-service"
version = "0.1.0"
description = "Native SWE-bench service for MLPerf endpoint accuracy runs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp==3.14.1",
    "mini-swe-agent==2.3.0",
    "swebench==4.1.0",
    "litellm==1.91.0",
    "msgspec==0.20.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
]

[tool.uv]
package = true
